--- a/Python Fundamentals/Module_2_1_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_2_1_Python_Fundamentals.ipynb
@@ -52,11 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ft_bones:  <class 'list'>\n",
+      "['calcaneus', 'talus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# define list of strings\n",
@@ -71,11 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age_survey:  <class 'list'>\n",
+      "[12, 14, 12, 29, 12, 14, 12, 12, 13, 12, 14, 13, 13, 46, 13, 12, 12, 13, 13, 12, 12]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# define list of integers\n",
@@ -90,11 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mixed_list:  <class 'list'>\n",
+      "[1, 34, 0.999, 'dog', 'cat', ['calcaneus', 'talus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform'], [12, 14, 12, 29, 12, 14, 12, 12, 13, 12, 14, 13, 13, 46, 13, 12, 12, 13, 13, 12, 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# define list of mixed data type\n",
@@ -121,30 +142,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['braves', 'bulldogs', 'falcons', 'hawks', 'thrashers']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create team_names list and populate with 3-5 team name strings\n",
-    "\n",
+    "team_names = [\"braves\", \"bulldogs\", \"falcons\", \"hawks\", \"thrashers\"]\n",
     "# [ ] print the list\n",
+    "\n",
+    "print(team_names)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 5, 412, 43, 'what is 6x9', 'hi', ['braves', 'bulldogs', 'falcons', 'hawks', 'thrashers']]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a list mix_list with numbers and strings with 4-6 items\n",
-    "\n",
+    "mix_list = [1, 5, 412, 43, \"what is 6x9\", \"hi\", team_names]\n",
     "# [ ] print the list\n",
-    "\n"
+    "print (mix_list)\n"
    ]
   },
   {
@@ -181,11 +216,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calcaneus is the 1st bone on the list\n",
+      "cuboid is the 3rd bone on the list\n",
+      "medial cuneiform is the last bone on the list\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "print(ft_bones[0], \"is the 1st bone on the list\")\n",
@@ -195,11 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "talus is connected to the navicular\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "print(ft_bones[1], \"is connected to the\",ft_bones[3])"
@@ -207,11 +256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first three ages total 38\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "three_ages_sum = age_survey[0] + age_survey[1] + age_survey[2]\n",
@@ -230,30 +285,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Parking first or atlantic\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a list, streets, that lists the name of 5 street name strings\n",
-    "\n",
+    "streets = [\"first\", \"broadway\", \"townsend\", \"park place\", \"atlantic\"]\n",
     "# [ ] print a message that there is \"No Parking\" on index 0 or index 4 streets\n",
-    "\n"
+    "print (\"No Parking\", streets[0], \"or\", streets[4])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Create a list, num_2_add, made of 5 different numbers between 0 - 25\n",
-    "\n",
+    "num_2_add = [0, 4, 25, 18, 2]\n",
     "# [ ] print the sum of the numbers\n",
-    "\n"
+    "print (num_2_add[0] + num_2_add[1] + num_2_add[2] + num_2_add[3] + num_2_add[4])\n"
    ]
   },
   {
@@ -269,11 +336,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pay_checks' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-c71e209b777a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# [ ] Fix the error by only editing and running the block below\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" Total of checks 3 & 4 = $\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpay_checks\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mpay_checks\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'pay_checks' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Review & Run, but ***Do Not Edit*** this code cell\n",
     "# [ ] Fix the error by only editing and running the block below\n",
@@ -283,14 +360,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Total of checks 3 & 4 = $ 340\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Fix the error above by creating and running code in this cell\n",
-    "\n"
+    "pay_checks = [50, 100, 140, 200, 3, 201]\n",
+    "print(\" Total of checks 3 & 4 = $\", pay_checks[2] + pay_checks[3])"
    ]
   },
   {
@@ -318,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
