--- a/Python Fundamentals/Module_2_4_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_2_4_Python_Fundamentals.ipynb
@@ -46,11 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_list before:  [11, 21, 13, 14, 51, 161, 117, 181]\n",
+      "sample_list after:   [11, 13, 14, 51, 161, 117, 181]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# the list before delete\n",
@@ -64,11 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_list before: [11, 13, 14, 51, 161, 117, 181]\n",
+      "sample_list after: [13, 14, 51, 161, 117, 181]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example Multiple Times\n",
     "# [ ] consider how to reset the list values?\n",
@@ -79,11 +93,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mixed_types list:  [1, 'cat', 3]\n",
+      "mixed_types list:  [1, 'cat', 3, 'turtle']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "mixed_types = [1, \"cat\"]\n",
@@ -110,19 +131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['calcaneus', 'talus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n",
+      "['calcaneus', 'talus', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print ft_bones list\n",
     "# [ ] delete \"cuboid\" from ft_bones\n",
     "# [ ] reprint list\n",
     "ft_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
     "            \"intermediate cuneiform\", \"medial cuneiform\"]\n",
-    "\n",
-    "\n"
+    "print (ft_bones)\n",
+    "del ft_bones [2]\n",
+    "print (ft_bones)"
    ]
   },
   {
@@ -136,11 +165,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['calcaneus', 'talus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n",
+      "['calcaneus', 'talus', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print ft_bones list\n",
     "# [ ] delete \"cuboid\" from ft_bones\n",
@@ -149,6 +185,11 @@
     "# [ ] check for deletion of \"cuboid\" and \"navicular\"\n",
     "ft_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
     "            \"intermediate cuneiform\", \"medial cuneiform\"]\n",
+    "print (ft_bones)\n",
+    "del ft_bones [2]\n",
+    "del ft_bones [2]\n",
+    "print (ft_bones)\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -178,11 +219,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Joana', 'Alton', 'Tobias']\n",
+      "Hello, Tobias\n",
+      "\n",
+      " ['Joana', 'Alton']\n",
+      "Hello, Alton\n",
+      "\n",
+      " ['Joana']\n",
+      "Hello, Joana\n",
+      "\n",
+      " []\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# pop() gets the last item by default\n",
@@ -201,11 +257,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before: [11, 21, 13, 14, 51, 161, 117, 181]\n",
+      "after : [11, 21, 13, 51, 161, 117, 181]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# can pop specific index like pop(3)\n",
@@ -217,11 +280,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list before: [11, 21, 13, 14, 51, 161, 117, 181]\n",
+      "list after : [11, 21, 13, 14, 51, 161]\n",
+      "add the popped values: 181 + 117 = 298\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# set a variable to a poped value\n",
@@ -246,18 +317,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "calcaneus\n",
+      "medial cuneiform\n",
+      "['talus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] pop() and print the first and last items from the ft_bones list\n",
     "ft_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
     "            \"intermediate cuneiform\", \"medial cuneiform\"]\n",
     "\n",
     "# [ ] print the remaining list\n",
-    "\n"
+    "print (ft_bones.pop(0))\n",
+    "print (ft_bones.pop(-1))\n",
+    "\n",
+    "print (ft_bones)\n"
    ]
   },
   {
@@ -285,11 +367,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poodle\n",
+      "Pug\n",
+      "Lab\n"
+     ]
+    }
+   ],
    "source": [
     "dog_types = [\"Lab\", \"Pug\", \"Poodle\"]\n",
     "\n",
@@ -314,14 +404,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an Item's cost: 1\n",
+      "Enter an Item's cost (or 'quit' to exit): 2\n",
+      "Enter an Item's cost (or 'quit' to exit): 3\n",
+      "Enter an Item's cost (or 'quit' to exit): 4\n",
+      "Enter an Item's cost (or 'quit' to exit): 5\n",
+      "Enter an Item's cost (or 'quit' to exit): 6\n",
+      "Enter an Item's cost (or 'quit' to exit): quit\n",
+      "['1', '2', '3', '4', '5', '6']\n"
+     ]
+    }
+   ],
    "source": [
     "#[ ] complete the Register Input task above\n",
-    "\n"
+    "purchase_amounts = []\n",
+    "\n",
+    "purchase_amounts.append(input (\"Enter an Item's cost: \"))\n",
+    "\n",
+    "while True:\n",
+    "    cost = input (\"Enter an Item's cost (or 'quit' to exit): \")\n",
+    "    if cost == \"quit\":\n",
+    "        break\n",
+    "    else:\n",
+    "        purchase_amounts.append(cost)\n",
+    "        \n",
+    "print (purchase_amounts)\n",
+    "     \n"
    ]
   },
   {
@@ -343,14 +458,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter an Item's cost: 1\n",
+      "Enter an Item's cost (or 'quit' to exit): 2\n",
+      "Enter an Item's cost (or 'quit' to exit): 3\n",
+      "Enter an Item's cost (or 'quit' to exit): 4\n",
+      "Enter an Item's cost (or 'quit' to exit): 5\n",
+      "Enter an Item's cost (or 'quit' to exit): quit\n",
+      "['1', '2', '3', '4', '5']\n",
+      "15.0\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete the Register Total task above\n",
-    "\n"
+    "\n",
+    "subtotal = 0\n",
+    "purchase_amounts = []\n",
+    "\n",
+    "purchase_amounts.append(input (\"Enter an Item's cost: \"))\n",
+    "\n",
+    "while True:\n",
+    "    cost = input (\"Enter an Item's cost (or 'quit' to exit): \")\n",
+    "    if cost == \"quit\":\n",
+    "        break\n",
+    "    else:\n",
+    "        purchase_amounts.append(cost)\n",
+    "        \n",
+    "print (purchase_amounts)\n",
+    "     \n",
+    "\n",
+    "while purchase_amounts:\n",
+    "    subtotal += float(purchase_amounts.pop())\n",
+    "    \n",
+    "print (subtotal)"
    ]
   },
   {
@@ -379,11 +526,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lab', 'Poodle']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "dog_types = [\"Lab\", \"Pug\", \"Poodle\"]\n",
@@ -397,11 +550,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lab', 'Pug', 'Poodle', 'Poodle', 'Pug', 'Poodle']\n",
+      "['Lab', 'Pug', 'Poodle', 'Pug', 'Poodle']\n",
+      "['Lab', 'Pug', 'Pug', 'Poodle']\n",
+      "['Lab', 'Pug', 'Pug']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "dogs = [\"Lab\", \"Pug\", \"Poodle\", \"Poodle\", \"Pug\", \"Poodle\"]\n",
@@ -421,15 +583,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pug', 'Pug']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# Change to \"Lab\", etc... to fix error\n",
-    "dogs.remove(\"Collie\")\n",
+    "dogs.remove(\"Lab\")\n",
     "print(dogs)"
    ]
   },
@@ -446,16 +614,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lab', 'Pug', 'Poodle', 'Poodle', 'Pug', 'Poodle']\n",
+      "['Lab', 'Pug', 'Poodle', 'Pug', 'Poodle']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] remove one \"Poodle\" from the list: dogs , or print \"no Poodle found\"\n",
     "# [ ] print list before and after\n",
     "dogs = [\"Lab\", \"Pug\", \"Poodle\", \"Poodle\", \"Pug\", \"Poodle\"]\n",
-    "\n"
+    "print (dogs)\n",
+    "if \"Poodle\" in dogs:\n",
+    "    dogs.remove(\"Poodle\")\n",
+    "else:\n",
+    "    print (\"No Poodle found.\")\n",
+    "    \n",
+    "print (dogs)\n"
    ]
   },
   {
@@ -483,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
