--- a/Python Fundamentals/Module_2_Practice_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_2_Practice_Python_Fundamentals.ipynb
@@ -23,25 +23,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and populate list called days_of_week then print it\n",
-    "\n"
+    "days_of_week = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
+    "print (days_of_week)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n",
+      "Thursday\n",
+      "Saturday\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] after days_of_week is run above, print the days in the list at odd indexes 1,3,5\n",
+    "print (days_of_week[1])\n",
+    "print (days_of_week[3])\n",
+    "print (days_of_week[5])\n",
     "\n"
    ]
   },
@@ -62,14 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', '', 'ABC', 'DEF', 'GHI', 'JKL', 'MNO', 'PQRS', 'TUV', 'WXYZ']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create and populate list called phone_letters then print it\n",
-    "\n"
+    "phone_letters = [' ', \"\", \"ABC\", \"DEF\", \"GHI\", \"JKL\", \"MNO\", \"PQRS\", \"TUV\", \"WXYZ\"]\n",
+    "print (phone_letters)"
    ]
   },
   {
@@ -86,32 +111,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create a variable: day, assign day to \"Tuesday\" using days_of_week[]\n",
     "# [ ] print day variable\n",
     "\n",
-    "\n",
+    "day = days_of_week[1]\n",
+    "print (day)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n",
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Tuesday', 'Sunday']\n"
+     ]
+    }
+   ],
    "source": [
     "# PART 2\n",
     "# [ ] assign day to days_of_week index = 5\n",
     "# [ ] print day\n",
     "\n",
-    "\n"
+    "days_of_week[5] = day\n",
+    "print (day)\n",
+    "print (days_of_week)\n"
    ]
   },
   {
@@ -128,15 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Tuesday', 'Sunday', 'Samsday', 'Samsday', 'Samsday', 'Samsday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Make up a new day! - append an 8th day of the week to days_of_week \n",
     "# [ ] print days_of_week\n",
-    "\n",
+    "days_of_week.append(\"Samsday\")\n",
+    "print (days_of_week)\n",
     "\n"
    ]
   },
@@ -151,28 +199,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Resterday', 'Thursday', 'Friday', 'Tuesday', 'Sunday', 'Samsday', 'Samsday', 'Samsday', 'Samsday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Make up another new day - insert a new day into the middle of days_of_week between Wed - Thurs\n",
     "# [ ] print days_of_week\n",
     "\n",
-    "\n"
+    "days_of_week.insert(3, \"Resterday\")\n",
+    "print (days_of_week)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Resterday', 'Thursday', 'Friday', 'Lefterday', 'Tuesday', 'Sunday', 'Samsday', 'Samsday', 'Samsday', 'Samsday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  Extend the weekend - insert a day between Fri & Sat in the days_of_week list\n",
     "# [ ] print days_of_week\n",
+    "days_of_week.insert(6, \"Lefterday\")\n",
+    "print (days_of_week)\n",
     "\n",
     "\n"
    ]
@@ -188,46 +251,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Resterday', 'Thursday', 'Friday', 'Lefterday', 'Tuesday', 'Sunday', 'Samsday', 'Samsday']\n",
+      "Samsday\n",
+      "['Monday', 'Tuesday', 'Wednesday', 'Resterday', 'Thursday', 'Friday', 'Lefterday', 'Tuesday', 'Sunday', 'Samsday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print days_of_week \n",
     "# [ ] modified week is too long - pop() the last index of days_of_week & print .pop() value\n",
     "# [ ] print days_of_week\n",
     "\n",
-    "\n"
+    "print (days_of_week)\n",
+    "print (days_of_week.pop())\n",
+    "print (days_of_week)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Resterday', 'Thursday', 'Friday', 'Lefterday', 'Tuesday', 'Sunday', 'Samsday']\n",
+      "None\n",
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Lefterday', 'Tuesday', 'Sunday', 'Samsday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print days_of_week \n",
     "# [ ] delete (del) the new day added to the middle of the week \n",
     "# [ ] print days_of_week\n",
-    "\n",
+    "print (days_of_week)\n",
+    "print (days_of_week.remove(\"Resterday\"))\n",
+    "print (days_of_week)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Lefterday', 'Tuesday', 'Sunday', 'Samsday']\n",
+      "Samsday\n",
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Lefterday', 'Tuesday', 'Sunday']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print days_of_week \n",
     "# [ ] programmers choice - pop() any day in days_of week & print .pop() value\n",
     "# [ ] print days_of_week\n",
-    "\n"
+    "\n",
+    "print (days_of_week)\n",
+    "print (days_of_week.pop(-1))\n",
+    "print (days_of_week)"
    ]
   },
   {
@@ -280,24 +374,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', '', 'ABC', 'DEF', 'GHI', 'JKL', 'MNO', 'PQRS', 'TUV', 'WXYZ']\n",
+      "Letter to find: Z\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create let_to_num()\n",
-    "\n"
+    "print (phone_letters)\n",
+    "\n",
+    "def let_to_num(letter):\n",
+    "    \n",
+    "    key = 0\n",
+    "    while key < 10:\n",
+    "        \n",
+    "        if letter in phone_letters[key]:\n",
+    "            return key\n",
+    "        else:\n",
+    "            key = key + 1\n",
+    "        \n",
+    "    return \"Not Found\"\n",
+    "    \n",
+    "print (let_to_num(input (\"Letter to find: \")))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', '', 'ABC', 'DEF', 'GHI', 'JKL', 'MNO', 'PQRS', 'TUV', 'WXYZ']\n",
+      "Letter to find: \n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (phone_letters)\n",
+    "phone_letters = [' ', \"\", \"ABC\", \"DEF\", \"GHI\", \"JKL\", \"MNO\", \"PQRS\", \"TUV\", \"WXYZ\"]\n",
+    "\n",
+    "def let_to_num(letter):\n",
+    "    \n",
+    "    key = 0\n",
+    "    while key < 10:\n",
+    "        \n",
+    "        if letter == \"\":\n",
+    "            if len(phone_letters[key]) == 0:\n",
+    "                return key\n",
+    "            else:\n",
+    "                key = key + 1\n",
+    "        elif letter in phone_letters[key]:\n",
+    "            return key\n",
+    "        else:\n",
+    "            key = key + 1\n",
+    "        \n",
+    "    return \"Not Found\"\n",
+    "    \n",
+    "print (let_to_num(input (\"Letter to find: \")))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,32 +460,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forward String:  It was the best of times, it was the worst of times.\n",
+      "Reversed String:  .semit fo tsrow eht saw ti ,semit fo tseb eht saw tI\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Challenge: write the code for \"reverse a string\"\n",
     "\n",
+    "fwd = \"It was the best of times, it was the worst of times.\"\n",
+    "i = 0\n",
+    "rev = \"\"\n",
+    "temp = []\n",
+    "\n",
+    "print (\"Forward String: \", fwd)\n",
+    "\n",
+    "while i < len(fwd) :\n",
+    "    temp.append(fwd[i])\n",
+    "    i = i + 1\n",
     "    \n",
-    " "
+    "i = 0\n",
+    "\n",
+    "while i < len(fwd):\n",
+    "    rev = rev + temp.pop()\n",
+    "#    rev[i] = fwd.pop()\n",
+    "    i = i + 1\n",
+    "    \n",
+    " \n",
+    "print (\"Reversed String: \", rev)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "source": [
     "[Terms of use](http://go.microsoft.com/fwlink/?LinkID=206977) &nbsp; [Privacy & cookies](https://go.microsoft.com/fwlink/?LinkId=521839) &nbsp; © 2017 Microsoft"
    ]
@@ -362,9 +529,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
