--- a/Python Fundamentals/Module_2_2_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_2_2_Python_Fundamentals.ipynb
@@ -46,9 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_list before:  [1, 1, 2]\n",
+      "sample_list after:   [1, 1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# the list before append\n",
@@ -62,9 +71,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sample_list start:   [1, 1, 2, 3]\n",
+      "sample_list added:   [1, 1, 2, 3, 3]\n",
+      "sample_list added:   [1, 1, 2, 3, 3, 8]\n",
+      "sample_list added:   [1, 1, 2, 3, 3, 8, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# append number to sample_list\n",
@@ -86,9 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mixed_types list:  [1, 'cat', 3]\n",
+      "mixed_types list:  [1, 'cat', 3, 'turtle']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "mixed_types = [1, \"cat\"]\n",
@@ -115,36 +144,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.01, 0.05, 0.1, 0.25, 1.0, 5.0]\n",
+      "[0.01, 0.05, 0.1, 0.25, 1.0, 5.0, 10.0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Currency Values\n",
     "# [ ] create a list of 3 or more currency denomination values, cur_values\n",
     "# cur_values, contains values of coins and paper bills (.01, .05, etc.)\n",
+    "cur_values = [ 0.01, 0.05, 0.10, 0.25, 1.0, 5.0]\n",
     "\n",
     "# [ ] print the list\n",
-    "\n",
+    "print (cur_values)\n",
     "\n",
     "# [ ] append an item to the list and print the list\n",
-    " \n"
+    "cur_values.append(10.0)\n",
+    "\n",
+    "print (cur_values)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['penny', 'nickle', 'dime', 'quarter']\n",
+      "['penny', 'nickle', 'dime', 'quarter', 'dollar']\n"
+     ]
+    }
+   ],
    "source": [
     "# Currency Names\n",
     "# [ ] create a list of 3 or more currency denomination NAMES, cur_names\n",
     "# cur_names contains the NAMES of coins and paper bills (penny, etc.)\n",
-    "\n",
+    "cur_names = [ \"penny\", \"nickle\", \"dime\", \"quarter\"]\n",
     "# [ ] print the list\n",
-    "\n",
+    "print (cur_names)\n",
     "\n",
     "# [ ] append an item to the list and print the list\n",
-    " \n"
+    "cur_names.append('dollar')\n",
+    "print (cur_names)"
    ]
   },
   {
@@ -160,14 +211,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a Currency Namefiver\n",
+      "['penny', 'nickle', 'dime', 'quarter', 'dollar', 'fiver']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] append additional values to the Currency Names list using input()\n",
-    "\n",
+    "cur_names.append(input (\"Enter a Currency Name\"))\n",
     "# [ ] print the appended list\n",
-    "\n"
+    "print (cur_names)\n"
    ]
   },
   {
@@ -187,12 +247,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On what day of the month were you born? (1-31)29\n",
+      "On what day of the month were you born? (1-31 or 'quit' to exit)48\n",
+      "On what day of the month were you born? (1-31 or 'quit' to exit)37\n",
+      "On what day of the month were you born? (1-31 or 'quit' to exit)quit\n",
+      "['2', '9', '4', '8', '3', '7']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete the Birthday Survey task above\n",
-    "\n"
+    "bday_survey = []\n",
+    "\n",
+    "bday = input (\"On what day of the month were you born? (1-31)\")\n",
+    "index = 0\n",
+    "\n",
+    "while True:\n",
+    "    \n",
+    "    bday_survey += bday\n",
+    "    bday = input (\"On what day of the month were you born? (1-31 or 'quit' to exit)\")\n",
+    "    if bday == \"quit\":\n",
+    "        break\n",
+    "            \n",
+    "print (bday_survey)\n"
    ]
   },
   {
@@ -206,13 +290,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "an item in the list is:  2\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Fix the Error\n",
     "three_numbers = [1, 1, 2]\n",
-    "print(\"an item in the list is: \", three_numbers[3])\n",
+    "print(\"an item in the list is: \", three_numbers[2])\n",
     "\n"
    ]
   },
@@ -241,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
