--- a/Python Fundamentals/Module_2_3_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_2_3_Python_Fundamentals.ipynb
@@ -48,9 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "party_list before:  ['Joana', 'Alton', 'Tobias']\n",
+      "party_list after:   ['Joana', 'Colette', 'Tobias']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# the list before Insert\n",
@@ -64,9 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before: ['Joana', 'Alton', 'Tobias']\n",
+      "\n",
+      "after: ['Joana', 'Alton Derosa', 'Tobias']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "party_list = [\"Joana\", \"Alton\", \"Tobias\"]\n",
@@ -87,9 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-a57c1210d89e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# IndexError trying to append to end of list\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mparty_list\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Alton\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparty_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
    "source": [
     "# IndexError Example\n",
     "# [ ] review and run example which results in an IndexError\n",
@@ -102,9 +133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "single_digits:  ['zero', 'one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine']\n",
+      "single_digits[3]:  three <class 'str'> \n",
+      "\n",
+      "single_digits:  ['zero', 'one', 'two', 3, 'four', 'five', 'six', 'seven', 'eight', 'nine']\n",
+      "single_digits[3]:  3 <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example changes the data type of an element\n",
     "# replace a string with a number (int)\n",
@@ -138,13 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5]\n",
+      "['small', 3, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete \"replace items in a list\" task\n",
     "\n",
-    " \n"
+    "three_num = [1, 3, 5]\n",
+    "print (three_num)\n",
+    "if three_num[0] < 5:\n",
+    "    three_num[0] = \"small\"\n",
+    "else:\n",
+    "    three_num[0] = \"large\"\n",
+    "    \n",
+    "print(three_num)\n"
    ]
   },
   {
@@ -163,13 +222,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 6, 7, 8]\n",
+      "[1, 2, 4, 6, 'large', 8]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  create challenge function\n",
     "\n",
-    "\n"
+    "def st_replace (int_list, index):\n",
+    "    if int_list[index] < 5:\n",
+    "        int_list[index] = \"small\"\n",
+    "    else:\n",
+    "        int_list[index] = \"large\"\n",
+    "        \n",
+    "    return int_list\n",
+    "\n",
+    "num_list = [1, 2, 4, 6, 7, 8]\n",
+    "print (num_list)\n",
+    "\n",
+    "st_replace(num_list, 4)\n",
+    "print (num_list)\n"
    ]
   },
   {
@@ -191,11 +271,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Show', 'Home', 'Nexus']\n",
+      "['SHOW', 'Home', 'nEXUS']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete coding task described above\n",
+    "three_words = [\"Show\", \"Home\", \"Nexus\"]\n",
+    "print (three_words)\n",
+    "\n",
+    "three_words[0] = three_words[0].upper()\n",
+    "\n",
+    "three_words[2] = three_words[2].swapcase()\n",
+    "\n",
+    "print (three_words)\n",
+    "\n",
+    "    \n",
     "\n",
     " \n"
    ]
@@ -227,9 +326,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "party_list before:  ['Joana', 'Alton', 'Tobias']\n",
+      "index 1 is Alton \n",
+      "index 2 is Tobias \n",
+      "\n",
+      "party_list after:   ['Joana', 'Colette', 'Alton', 'Tobias']\n",
+      "index 1 is Colette \n",
+      "index 2 is Alton \n",
+      "index 3 is Tobias\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# the list before Insert\n",
@@ -256,15 +370,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Joana', 'Tom', 'Alton', 'Tobias']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] insert a name from user input into the party_list in the second position (index 1)\n",
     "party_list = [\"Joana\", \"Alton\", \"Tobias\"]\n",
     "\n",
+    "party_list.insert(1,\"Tom\")\n",
+    "\n",
     "# [ ] print the updated list\n",
-    "\n"
+    "print (party_list)\n"
    ]
   },
   {
@@ -278,12 +402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tree_list before = ['oak']\n",
+      "tree_list after  = ['oak', 'pine']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Fix the Error\n",
-    "tree_list = \"oak\"\n",
+    "tree_list = [\"oak\"]\n",
     "print(\"tree_list before =\", tree_list)\n",
     "tree_list.insert(1,\"pine\")\n",
     "print(\"tree_list after  =\", tree_list)\n",
@@ -315,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
