--- a/Python Fundamentals/Module_2_Required_Code_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_2_Required_Code_Python_Fundamentals.ipynb
@@ -67,17 +67,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List empty, exiting.\n"
+     ]
+    }
+   ],
    "source": [
     "# [] create list-o-matic\n",
+    "\n",
+    "def list_o_matic (istring, ilist):\n",
+    "    \n",
+    "    if istring == \"\":\n",
+    "        return \"'\" + ilist.pop() + \"' was poped from the list.\"\n",
+    "    elif istring in ilist:\n",
+    "        ilist.remove(istring)\n",
+    "        return \"'\" + istring + \"' was removed from the list.\"\n",
+    "    else:\n",
+    "        ilist.append(istring)\n",
+    "        return \"'\" + istring + \"' was appended to the list.\"\n",
+    "        \n",
+    "    \n",
     "# [] copy and paste in edX assignment page\n",
+    "animals = [\"dog\", \"cat\", \"bird\", \"fish\"]\n",
+    "print (\"Initial list: \\n\", animals)\n",
     "\n",
-    "\n",
-    "\n"
+    "while animals:\n",
+    "    answer = input (\"Enter an animal, an empty string, or 'quit' to exit: \")\n",
+    "    \n",
+    "    if answer == \"quit\":\n",
+    "        break\n",
+    "    else:\n",
+    "        print (list_o_matic (answer, animals))\n",
+    "        print (\"Current list: \\n\", animals)\n",
+    "    \n",
+    "        \n",
+    "if animals:\n",
+    "    print (\"Here is the final list: \\n\", animals)\n",
+    "else:\n",
+    "    print (\"List empty, exiting.\")"
    ]
   },
   {
